<resources>
    <string name="app_name">My Shop</string>
    <string name="delete_all">Delete All</string>
    <string name="add_some_new_item">Add some new item</string>
    <string name="shop_is_empty">Shop is empty</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="user_feedback">User Feedback</string>
    <string name="no_of_item_in_stock">stock</string>
    <string name="price_of_the_item">Price</string>
    <string name="price_inr">Price(INR)</string>
    <string name="name">name</string>
    <string name="feedback">feedback</string>
    <string name="delete">Delete</string>
    <string name="done">done</string>
    <string name="order">Order</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>
