<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="24dp"
            android:paddingStart="4dp"
            android:text="@string/item_name"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="68dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="24sp"
            android:inputType="textCapWords"
            android:autofillHints="name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="24dp"
            android:text="@string/price_inr"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_of_the_item"
            android:textSize="24sp"
            android:autofillHints="price"
            android:inputType="number"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="24dp"
            android:text="@string/quantity"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_of_item_in_stock"
            android:textSize="24sp"
            android:autofillHints="quantity"
            android:inputType="number"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        tools:layout_editor_absoluteX="-16dp"
        android:layout_margin="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_feedback"
            android:textSize="24sp"
            android:paddingStart="4dp"
            android:paddingEnd="8dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback"
            android:autofillHints="feedback"
            android:textSize="24sp"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>